the screen titles are not center of screen regardless of size

--- a/CloudList/res/layout/join_cloud_list.xml
+++ b/CloudList/res/layout/join_cloud_list.xml
@@ -5,29 +5,32 @@
     android:layout_height="match_parent"
     android:background="#818590" >
 
-    <TextView
-        android:id="@+id/textViewCloud"
+    <LinearLayout
+        android:id="@+id/layout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="60dp"
-        android:layout_marginTop="25dp"
-        android:text="Cloud"
-        android:textColor="#FFFFFF"
-        android:textSize="50sp" />
+        android:layout_marginTop="38dp"
+        android:layout_centerHorizontal="true" >
 
-    <TextView
-        android:id="@+id/textViewJoin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textViewCloud"
-        android:layout_alignBottom="@+id/textViewCloud"
-        android:layout_toLeftOf="@+id/textViewCloud"
-        android:text="Join"
-        android:textColor="#3B3D49"
-        android:textSize="50sp" />
+        <TextView
+            android:id="@+id/textViewJoin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="Join"
+            android:textColor="#3B3D49"
+            android:textSize="50sp" />
 
+        <TextView
+            android:id="@+id/textViewCloud"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="Cloud"
+            android:textColor="#FFFFFF"
+            android:textSize="50sp" />
+
+	</LinearLayout>
     <Button
         android:id="@+id/button1"
         android:layout_width="125dp"
