--- a/CloudList/res/layout/main_content.xml
+++ b/CloudList/res/layout/main_content.xml
@@ -1,43 +1,19 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#818590" >
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView1"
-        android:layout_alignBottom="@+id/textView1"
-        android:layout_toLeftOf="@+id/textView1"
-        android:text="Cloud"
-        android:textColor="#3B3D49"
-        android:textSize="50sp" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="60dp"
-        android:layout_marginTop="25dp"
-        android:text="List"
-        android:textColor="#FFFFFF"
-        android:textSize="50sp" />
-
     <Button
         android:id="@+id/button1"
         android:layout_width="125dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/layout1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="65dp"
         android:background="#DE6141"
-        android:text="Start a Cloud"
         android:onClick="startCloud"
+        android:text="Start a Cloud"
         android:textColor="#FFFFFF" />
 
     <Button
@@ -48,11 +24,34 @@
         android:layout_below="@+id/button1"
         android:layout_marginTop="38dp"
         android:background="#DE6141"
-        android:text="Join a Cloud"
         android:onClick="joinCloud"
+        android:text="Join a Cloud"
         android:textColor="#FFFFFF" />
 
-    
+    <LinearLayout
+        android:id="@+id/layout1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="38dp"
+        android:layout_centerHorizontal="true" >
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="Cloud"
+            android:textColor="#3B3D49"
+            android:textSize="50sp" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="List"
+            android:textColor="#FFFFFF"
+            android:textSize="50sp" />
+    </LinearLayout>
 
 </RelativeLayout>
