--- a/CloudList/res/layout/join_cloud_list.xml
+++ b/CloudList/res/layout/join_cloud_list.xml
@@ -3,17 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#818590" >
+    android:background="#818590"
+    android:layout_centerInParent="true" >
 
     <LinearLayout
-        android:id="@+id/layout1"
+        android:id="@+id/layoutJoin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="38dp"
         android:layout_centerHorizontal="true" >
 
         <TextView
-            android:id="@+id/textViewJoin"
+            android:id="@+id/tv_join"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
@@ -22,7 +23,7 @@
             android:textSize="50sp" />
 
         <TextView
-            android:id="@+id/textViewCloud"
+            android:id="@+id/tv_cloud"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
@@ -31,13 +32,14 @@
             android:textSize="50sp" />
 
 	</LinearLayout>
+
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/buttonSubmit"
         android:layout_width="125dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="58dp"
+        android:layout_marginBottom="54dp"
         android:background="#DE6141"
         android:onClick="submitList"
         android:text="Submit"
