--- a/CloudList/res/layout/main_content.xml
+++ b/CloudList/res/layout/main_content.xml
@@ -5,10 +5,10 @@
     android:background="#818590" >
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/buttonStart"
         android:layout_width="125dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/layout1"
+        android:layout_below="@+id/layoutMain"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="65dp"
         android:background="#DE6141"
@@ -17,11 +17,11 @@
         android:textColor="#FFFFFF" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonJoin"
         android:layout_width="125dp"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button1"
-        android:layout_below="@+id/button1"
+        android:layout_alignLeft="@+id/buttonStart"
+        android:layout_below="@+id/buttonStart"
         android:layout_marginTop="38dp"
         android:background="#DE6141"
         android:onClick="joinCloud"
@@ -29,14 +29,14 @@
         android:textColor="#FFFFFF" />
 
     <LinearLayout
-        android:id="@+id/layout1"
+        android:id="@+id/layoutMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="38dp"
         android:layout_centerHorizontal="true" >
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tv_cloud_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
@@ -45,7 +45,7 @@
             android:textSize="50sp" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/tv_list_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
