--- a/CloudList/res/layout/start_cloud_list.xml
+++ b/CloudList/res/layout/start_cloud_list.xml
@@ -6,14 +6,14 @@
     android:background="#818590" >
     
     <LinearLayout
-        android:id="@+id/layout1"
+        android:id="@+id/layoutStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="38dp"
         android:layout_centerHorizontal="true" >
 
         <TextView
-	        android:id="@+id/textViewStart"
+	        android:id="@+id/tv_start"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_weight="0"
@@ -22,7 +22,7 @@
 	        android:textSize="50sp" />
         
 	    <TextView
-	        android:id="@+id/textViewCloud1"
+	        android:id="@+id/tv_cloud_start"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_weight="0"
