--- a/CloudList/res/layout/song_row.xml
+++ b/CloudList/res/layout/song_row.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="30dp"
     android:background="#818590"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layout_gravity="center_horizontal">
 
     <TextView
         android:id="@+id/tv_song_number"
