--- a/CloudList/res/layout/start_cloud_list.xml
+++ b/CloudList/res/layout/start_cloud_list.xml
@@ -34,7 +34,7 @@
     </LinearLayout>
     
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/buttonStartLocal"
         android:layout_width="125dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -42,7 +42,7 @@
         android:layout_marginBottom="58dp"
         android:background="#DE6141"
         android:onClick="onStart"
-        android:text="Start"
+        android:text="Start Cloud"
         android:textColor="#FFFFFF" />
 
     
